# doc-search

./: Dockerfile  README.md  docker-compose.yml  example.env  pyproject.toml
app/: main.py
app/api/: dependencies.py  router.py
app/api/v1/: doc.py  posts.py
app/core/: settings.py
app/db/: events.py  redis.py
app/db/sources/: posts.json
app/schemas/: doc.py  posts.py
app/services/: posts.py
scripts/: load_data_into_elastic.py  prestart.sh
tests/: conftest.py  pytest.ini
tests/json/: test_data.json  test_mappings.json
tests/test_api/: test_api.py  test_api_errors.py
