[tool.poetry]
name = "doc-search"
version = "0.1.0"
description = "Document search engine"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "doc_search"}]

[tool.poetry.dependencies]
python = "3.11"
fastapi = "^0.85.0"
uvicorn = {extras = ["standard"], version = "^0.18.3"}
elasticsearch = {extras = ["async"], version = "^8.4.3"}
orjson = "^3.8.0"
pydantic = {extras = ["dotenv"], version = "^1.10.2"}
redis = "^4.3.4"
gunicorn = "^20.1.0"


[tool.poetry.dev-dependencies]
black = "^22.10.0"

[tool.poetry.group.dev.dependencies]
autopep8 = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "main:__main__"
